# pawshell

./: .gitignore  Cargo.toml  README.md  config.toml
src/: app.rs  config.rs  config_path.rs  llm.rs  main.rs  ollama.rs  pet.rs  terminal.rs  ui.rs
