[package]
name = "petcli"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
confy = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.74"
dirs = "5.0.1"
